package model.items;

public enum ArmorSlot {
	HEAD,
	CHEST,
	LEGS;
}
