package model.items;

/**
 * 
 * @author Frederick Hastedt
 *
 * Enum to handle item rarity.
 */
public enum Rarity {
	COMMON,
	RARE,
	EPIC,
	LEGENDARY
	
}
